[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.0.27", features = ["derive", "string"] }
lazy_static = "1.4.0"
libc = "0.2.153"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
shlex = "1.3.0"
sysinfo = "0.30.11"
toml = "0.8.12"
itertools = "0.13.0"
